--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 	  <artifactId>log4j-core</artifactId>
 	  <version>2.11.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.apache.logging.log4j</groupId>
+	    <artifactId>log4j-jul</artifactId>
+	    <version>2.1</version>
+	    <scope>test</scope>
+	</dependency>
 	
     <dependency>
       <groupId>com.google.apis</groupId>
@@ -45,28 +51,50 @@
 	    <artifactId>google-api-services-plus</artifactId>
 	    <version>v1-rev553-1.23.0</version>
 	</dependency>
-
+	
+	
+	<!-- 
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version> <!-- 1.9.4 -->
-
+            <version>1.9.13</version> 1.9.4
+	 -->
         <dependency>
             <groupId>com.google.http-client</groupId>
             <artifactId>google-http-client-jackson2</artifactId>
             <version>1.24.1</version> <!-- 1.20.0 -->
         </dependency>
-
         <dependency>
             <groupId>com.google.oauth-client</groupId>
             <artifactId>google-oauth-client-jetty</artifactId>
             <version>1.24.1</version> <!-- 1.20.0 -->
         </dependency>
-
         <dependency>
             <groupId>com.google.collections</groupId>
             <artifactId>google-collections</artifactId>
             <version>1.0</version>
         </dependency>
+		<dependency>
+		    <groupId>org.mortbay.jetty</groupId>
+		    <artifactId>jetty-util</artifactId>
+		    <version>6.1.26</version>
+		</dependency>
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>servlet-api</artifactId>
+		    <version>2.5</version>
+		    <scope>provided</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>com.webfirmframework</groupId>
+		    <artifactId>wffweb</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.2</version>
+		</dependency>
 	
   </dependencies>
   
