--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,21 @@
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
 			</plugin>
+			<plugin>
+			  <groupId>org.codehaus.mojo</groupId>
+			  <artifactId>exec-maven-plugin</artifactId>
+			  <version>1.2.1</version>
+			  <executions>
+			    <execution>
+			      <goals>
+			        <goal>java</goal>
+			      </goals>
+			    </execution>
+			  </executions>
+			  <configuration>
+			    <mainClass>tv.hd3g.ytshowplist.Generate</mainClass>
+			  </configuration>
+			</plugin>
 		</plugins>
 		<extensions>
 			<extension>
