Switch to appassembler, move conf files to config file, add make.bash

--- a/pom.xml
+++ b/pom.xml
@@ -139,19 +139,26 @@
 				<version>2.8.2</version>
 			</plugin>
 			<plugin>
-			  <groupId>org.codehaus.mojo</groupId>
-			  <artifactId>exec-maven-plugin</artifactId>
-			  <version>1.2.1</version>
-			  <executions>
-			    <execution>
-			      <goals>
-			        <goal>java</goal>
-			      </goals>
-			    </execution>
-			  </executions>
-			  <configuration>
-			    <mainClass>tv.hd3g.ytshowplist.Generate</mainClass>
-			  </configuration>
+				<!-- http://www.mojohaus.org/appassembler/appassembler-maven-plugin/usage-program.html -->
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>1.10</version>
+				<configuration>
+					<configurationDirectory>config</configurationDirectory>
+					<copyConfigurationDirectory>true</copyConfigurationDirectory>
+					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+					<!-- extraJvmArguments>-Xms128m</extraJvmArguments -->
+					<!-- licenseHeaderFile>${basedir}/license-header.txt</licenseHeaderFile -->
+					<platforms>
+						<platform>unix</platform>
+					</platforms>
+					<programs>
+						<program>
+							<mainClass>tv.hd3g.ytshowplist.Generate</mainClass>
+							<id>ytshowplist</id>
+						</program>
+					</programs>
+				</configuration>
 			</plugin>
 		</plugins>
 		<extensions>
