--- a/pom.xml
+++ b/pom.xml
@@ -1,124 +1,122 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>tv.hd3g</groupId>
-  <artifactId>ytshowplist</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>tv.hd3g</groupId>
+	<artifactId>ytshowplist</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>ytshowplist</name>
-  <url>https://github.com/hdsdi3g/ytshowplist</url>
+	<name>ytshowplist</name>
+	<url>https://github.com/hdsdi3g/ytshowplist</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<maven.compiler.source>10</maven.compiler.source>
-	<maven.compiler.target>10</maven.compiler.target>
-    <maven.javadoc.skip>true</maven.javadoc.skip>
-  </properties>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.javadoc.skip>true</maven.javadoc.skip>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-	<dependency>
-	  <groupId>org.apache.logging.log4j</groupId>
-	  <artifactId>log4j-api</artifactId>
-	  <version>2.11.0</version>
-	</dependency>
-	<dependency>
-	  <groupId>org.apache.logging.log4j</groupId>
-	  <artifactId>log4j-core</artifactId>
-	  <version>2.11.0</version>
-	</dependency>
-	<dependency>
-	    <groupId>org.apache.logging.log4j</groupId>
-	    <artifactId>log4j-jul</artifactId>
-	    <version>2.1</version>
-	    <scope>test</scope>
-	</dependency>
-	
-    <dependency>
-      <groupId>com.google.apis</groupId>
-      <artifactId>google-api-services-youtube</artifactId>
-      <version>v3-rev204-1.24.1</version>
-    </dependency>
-	<dependency>
-	    <groupId>com.google.apis</groupId>
-	    <artifactId>google-api-services-plus</artifactId>
-	    <version>v1-rev553-1.23.0</version>
-	</dependency>
-	
-	
-	<!-- 
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version> 1.9.4
-	 -->
-        <dependency>
-            <groupId>com.google.http-client</groupId>
-            <artifactId>google-http-client-jackson2</artifactId>
-            <version>1.24.1</version> <!-- 1.20.0 -->
-        </dependency>
-        <dependency>
-            <groupId>com.google.oauth-client</groupId>
-            <artifactId>google-oauth-client-jetty</artifactId>
-            <version>1.24.1</version> <!-- 1.20.0 -->
-        </dependency>
-        <dependency>
-            <groupId>com.google.collections</groupId>
-            <artifactId>google-collections</artifactId>
-            <version>1.0</version>
-        </dependency>
+	<dependencies>
 		<dependency>
-		    <groupId>org.mortbay.jetty</groupId>
-		    <artifactId>jetty-util</artifactId>
-		    <version>6.1.26</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>javax.servlet</groupId>
-		    <artifactId>servlet-api</artifactId>
-		    <version>2.5</version>
-		    <scope>provided</scope>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-jul</artifactId>
+			<version>2.1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
-		    <groupId>com.webfirmframework</groupId>
-		    <artifactId>wffweb</artifactId>
-		    <version>3.0.0</version>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-youtube</artifactId>
+			<version>v3-rev204-1.24.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-plus</artifactId>
+			<version>v1-rev553-1.23.0</version>
+		</dependency>
+
+
+		<!-- <groupId>org.codehaus.jackson</groupId> <artifactId>jackson-mapper-asl</artifactId> 
+			<version>1.9.13</version> 1.9.4 -->
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson2</artifactId>
+			<version>1.24.1</version> <!-- 1.20.0 -->
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client-jetty</artifactId>
+			<version>1.24.1</version> <!-- 1.20.0 -->
+		</dependency>
+		<dependency>
+			<groupId>com.google.collections</groupId>
+			<artifactId>google-collections</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-util</artifactId>
+			<version>6.1.26</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.webfirmframework</groupId>
+			<artifactId>wffweb</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.2</version>
 		</dependency>
-	
-  </dependencies>
-  
-  <organization>
-  	<name>hd3g.tv</name>
-  	<url>https://hd3g.tv</url>
-  </organization>
 
-  <scm>
-	<connection>scm:git:https://github.com/hdsdi3g/ytshowplist.git</connection>
-	<developerConnection>scm:git:https://github.com/hdsdi3g/ytshowplist.git</developerConnection>
-	<url>https://github.com/hdsdi3g</url>
-	<tag>HEAD</tag>
-  </scm>
-  <issueManagement>
-  	<url>https://github.com/hdsdi3g/ytshowplist/issues</url>
-  	<system>GitHub</system>
-  </issueManagement>
+	</dependencies>
+
+	<organization>
+		<name>hd3g.tv</name>
+		<url>https://hd3g.tv</url>
+	</organization>
+
+	<scm>
+		<connection>scm:git:https://github.com/hdsdi3g/ytshowplist.git</connection>
+		<developerConnection>scm:git:https://github.com/hdsdi3g/ytshowplist.git</developerConnection>
+		<url>https://github.com/hdsdi3g</url>
+		<tag>HEAD</tag>
+	</scm>
+	<issueManagement>
+		<url>https://github.com/hdsdi3g/ytshowplist/issues</url>
+		<system>GitHub</system>
+	</issueManagement>
 	<licenses>
-	  <license>
-	    <name>GNU Lesser General Public License, Version 3</name>
-	    <url>https://www.gnu.org/licenses/lgpl.txt</url>
-	    <distribution>repo</distribution>
-	  </license>
+		<license>
+			<name>GNU Lesser General Public License, Version 3</name>
+			<url>https://www.gnu.org/licenses/lgpl.txt</url>
+			<distribution>repo</distribution>
+		</license>
 	</licenses>
 
 	<build>
@@ -127,12 +125,12 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<version>3.0.1</version>
-			</plugin>		
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.0.1</version>
-			</plugin>		
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
@@ -171,16 +169,16 @@
 	</build>
 
 	<repositories>
-	  <repository>
-	    <id>hd3gtv</id>
-	    <url>https://maven.hd3g.tv/</url>
-	    <releases>
-	      <enabled>true</enabled>
-	    </releases>
-	    <snapshots>
-	      <enabled>true</enabled>
-	    </snapshots>
-	  </repository>
-	</repositories>  
+		<repository>
+			<id>hd3gtv</id>
+			<url>https://maven.hd3g.tv/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 
 </project>
